# TrueInferno

./: .gitignore  LICENSE  README.md
galeon/: .gitignore  CMakeLists.txt  Galeon.sln  installer.nsi
galeon/Debug/: Audio.lib
galeon/DocumentacionDoxygen/html/: 3_d_application_8cpp.html  3_d_application_8cpp__incl.dot  3_d_application_8cpp__incl.md5  3_d_application_8cpp_source.html  3_d_application_8h.html  3_d_application_8h__dep__incl.dot  3_d_application_8h__dep__incl.md5  3_d_application_8h__incl.dot  3_d_application_8h__incl.md5  3_d_application_8h_source.html  _animated_entity_8cpp.html  _animated_entity_8cpp__incl.dot  _animated_entity_8cpp__incl.md5  _animated_entity_8cpp_source.html  _animated_entity_8h.html  _animated_entity_8h__dep__incl.dot  _animated_entity_8h__dep__incl.md5  _animated_entity_8h__incl.dot  _animated_entity_8h__incl.md5  _animated_entity_8h_source.html  _animated_graphics_8cpp.html  _animated_graphics_8cpp__incl.dot  _animated_graphics_8cpp__incl.md5  _animated_graphics_8cpp_source.html  _animated_graphics_8h.html  _animated_graphics_8h__dep__incl.dot  _animated_graphics_8h__dep__incl.md5  _animated_graphics_8h__incl.dot  _animated_graphics_8h__incl.md5  _animated_graphics_8h_source.html  _application_2_documentation_8h_source.html  _application_state_8h.html  _application_state_8h__dep__incl.dot  _application_state_8h__dep__incl.md5  _application_state_8h__incl.dot  _application_state_8h__incl.md5  _application_state_8h_source.html  _avatar_controller_8cpp.html  _avatar_controller_8cpp__incl.dot  _avatar_controller_8cpp__incl.md5  (+962 more)
galeon/Exes/: Configure_d.ilk  Events.lua  GameRuntimeContext.cfg  ogre.cfg  plugins_d.cfg  resources.cfg
galeon/Projects/AI/: AI.vcxproj  AI.vcxproj.filters
galeon/Projects/Application/: Application.vcxproj  Application.vcxproj.filters  Galeon.aps  Galeon.rc  Galeon_Orig.rc  resource3.h
galeon/Projects/Audio/: Audio.vcxproj  Audio.vcxproj.filters
galeon/Projects/BaseSubsystems/: BaseSubsystems.vcxproj  BaseSubsystems.vcxproj.filters
galeon/Projects/GUI/: GUI.vcxproj  GUI.vcxproj.filters
galeon/Projects/Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters
galeon/Projects/Logic/: Logic.vcxproj  Logic.vcxproj.filters
galeon/Projects/Map/: Map.vcxproj
galeon/Projects/Physics/: Physics.vcxproj
galeon/Src/: CMakeLists.txt
galeon/Src/AI/: AStarFunctionsGaleon.cpp  AStarFunctionsGaleon.h  AStarFunctionsRoadPath.cpp  AStarFunctionsRoadPath.h  AStarFunctionsSoulPath.cpp  AStarFunctionsSoulPath.h  AStarFunctionsWalkingSoul.cpp  AStarFunctionsWalkingSoul.h  BurnSoulTask.h  Condition.h  DisjointSets.cpp  God.cpp  (+174 more)
galeon/dependencies/: build.xml
(+668 files in other folders)
